# Rust

./: Cargo.toml  README.md
src/: collections.rs  control_de_errores.rs  control_de_errores.rs~  enums.rs  estructuras_de_control.rs  generics.rs  generics_y_traits.rs  hashmaps.rs  leer_de_consola.rs  main.rs  match_cf.rs  modulos.rs  option.rs  ownership.rs  structs.rs  tipos_datos.rs  traits.rs
src/operaciones/: aritmetica.rs  mod.rs  vectores.rs
